<resources>
    <string name="app_name">Lecture 11</string>
    <string name="channel_messages_name">Сообщения</string>
    <string name="channel_messages_description">Важные сообщения</string>
    <string name="channel_default_name">Общие уведомления</string>
    <string name="channel_likes_name">Лайки</string>
    <string name="channel_likes_description">Просто лайки</string>
    <string name="simple_name">Простое уведомление</string>
    <string name="simple_description">Ничего особенного</string>
    <string name="message_name">Сообщение</string>

    <string name="user_name">User Name</string>
    <string name="new_like">Нравится ваша публикация</string>

    <string name="big_image">Большая картинка</string>

    <string name="message_summary">Сообщение #%d</string>
    <string name="show">Показать</string>
    <string name="clear">Удалить все</string>
    <string name="ongoing">Ongoing/Progress</string>
    <string name="infinite_progress">Бесконечный прогресс</string>
    <string name="remove">Удалить</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="messages">Сообщения</string>
    <string name="inbox_name">Inbox</string>
    <string name="crash">Crash!</string>
</resources>
